test/mutation_analysis/s0032_longest_valid_parentheses/hafis/ablation_o3_full/mutants/29/result.txt
./test/mutation_analysis/s0032_longest_valid_parentheses/hafis/ablation_o3_full/mutants/29/Solution.java:50: error: unreachable statement
        return max;
        ^
1 error
